navdrawer: fix z-index and floating background-color

--- a/components/complex/navdrawer/style.scss
+++ b/components/complex/navdrawer/style.scss
@@ -65,6 +65,7 @@
 .mdw-navdrawer__drawer {
   position: relative;
   align-self: flex-start;
+  z-index: 16;
   max-height: 100%;
   height: 100%;
   grid-column-start: 1;
@@ -86,17 +87,6 @@
   border-style: solid;
   border-width: 0;
   border-right-width: 1px;
-  &::before {
-    // Used for background color. Removed with mdw-floating
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-
 }
 
 .mdw-navdrawer__content {
@@ -257,15 +247,16 @@
     grid-row-start: 1;
     grid-column-end: 4;
     min-width: auto;
+    box-shadow: elevation(0);
     transform: translateX(-100%);
+    [dir=rtl] & {
+      transform: translateX(100%);
+    }
     border-right-width: 0;
     height: 100%;
     z-index: 16;
     margin: 0;
     border-radius: 0px;
-    &::before {
-      content: '';
-    }
   }
   .mdw-navdrawer__scrim {
     display: block;
@@ -290,9 +281,6 @@
   &[mdw-floating] {
     .mdw-navdrawer__drawer {
       border-right-width: 0;
-      &::before {
-        content: none;
-      }
     }
   }
   &[mdw-floating=card] {
@@ -305,9 +293,6 @@
       border-radius: dp(2);
       box-shadow: elevation(8);
       grid-row-end: 3;
-      &::before {
-        content: '';
-      }
     }
   }
   &[mdw-clipped],
@@ -318,6 +303,7 @@
     .mdw-navdrawer__drawer {
       grid-row-start: 2;
       height: auto;
+      z-index: auto;
     }
   }
   &[mdw-temporary] {
